<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">省钱通</string>
    <string name="contact_empty">没有联系人</string>
    <string name="contactsIconLabel">电话本</string>
	<string name="call_entry">拨打电话</string>
	<string name="call_entry_sub">输入号码</string>
	<string name="log_entry">通话记录</string>
	<string name="log_entry_sub">拨打时间</string>
	<string name="recharge_entry">移动卡充值</string>
	<string name="recharge_entry_sub">移动卡充值</string>
	<string name="getcharge_entry">余额查询</string>
	<string name="getcharge_entry_sub">联网查询</string>
	<string name="money_entry">省钱技巧</string>
	<string name="money_entry_sub">资费相关</string>
	<string name="input_num_title">拨打电话</string>
	<string name="call">拨号</string>
	<string name="input_num">输入本人接听号码：</string>
	<string name="your_balance_is">您当前帐户余额是：%.2f元</string>
	<string name="serial_number">移动充值卡序列号</string>
	<string name="passwd_number">移动充值卡密码</string>
	<string name="charge">确定充值</string>
	<string name="recentCalls_empty">通话记录为空</string>
	<string name="recentCallsIconLabel">通话记录</string>
	<string name="dialerIconLabel">拨号</string>
	<string name="launcherDialer">拨号</string>
	<string name="contactsFavoritesLabel">充值</string>
	<string name="getbalance">查询余额</string>
	<string name="delete_char">删除</string>
	<string name="fetching_balance">获取最新余额...</string>
	<string name="fetching_id">获取Id...</string>
	<string name="balance">余额</string>
	<string name="ok">确定</string>
	<string name="recharge">充值</string>
	<string name="recharging">正在充值...</string>
	<string name="recharge_suc">您的充值请求已提交审核, 请3-5分钟后在软件中查询余额</string>
	<string name="calling_first">正在连接网络提交请求...</string>
	<string name="calling_second">通过验证，正在为您接通...</string>
	<string name="calling_second_no_answer">通过验证，请注意接听系统回拨来电！</string>
	<string name="calling_third">通话中...</string>
	<string name="calling_time_over">超过20秒，请手动接听来电!</string>
	<string name="calling_time_over_second">您的“本人接听号码”为%s，请核对。</string>
	<string name="calling_answer_by_self">请手动接听来电!</string>
	<string name="cancel">取消</string>
	<string name="exception">异常</string>
	<string name="account_exception">帐户异常</string>	
	<string name="network_exception">网络异常或服务器维护中，请重试或稍候使用！</string>	
	<string name="sms_second">。客服电话：0755-88321332。</string>
	<string name="sms_sended">短信已发送！</string>
	<string name="add_quick_suc">添加成功</string>
	<string name="add_quick_fail">添加失败</string>
	<string name="number_format_err">号码格式错误！</string>
	<string name="about_help">帮助</string>
	<string name="about_about">关于 省钱通V1.8</string>
	<string name="partener">合作方</string>
	<string name="add_quick">加入常拨</string>
	<string name="your_id_is">您的ID是：</string>
	<string name="userId">用户ID: </string>
	<string name="new_version_hint">软件新版本提示</string>
	<string name="fetching_update">正在查询最新版本...</string>
	<string name="update_ver">版本更新</string>
	<string name="is_newest_ver">已经是最新版本</string>
	<string name="called">对方接听号码：</string>
	<string name="caller">本人接听号码：</string>
	<string name="called_number_err">您呼叫的号码格式不正确！</string>
	<string name="money_save_secret">省钱小秘籍</string>
	<string name="your_answer_num">此号码为您本人接听时手机或固话的号码</string>
	<string name="sdcard_not_ready">请插入SD卡后重试</string>
	<string name="update_downloading">下载更新 ...</string>
	<string name="download_fail">下载失败！请尝试重试！</string>
	<string name="found_old_version">温馨提示：您手机中存在两个版本省钱通，点确定卸载旧版本。不影响余额</string>
	<string name="active_count">建立您的账号</string>
	<string name="active_count_msg">未发现SIM卡或处于飞行模式! 若要继续使用本软件, 将需要重新建立帐号!</string>
	<string name="activating_start">开始建立账号...</string>
	<string name="activating_sms_sent">短信已发送</string>
	<string name="activating_sms_deliver">短信已到达, 处理中...</string>
	<string name="activating_finish">建立完毕！请返回继续操作</string>
	<string name="sms_active_fail">建立失败，请稍候尝试！</string>
	<string name="reset_caller_hint">设置本人接听号码需要重新建立帐号</string>
	<string name="next">下一步</string>
	<string name="register">注册</string>
	<string name="login">登录</string>
	<string name="enter_mobile_phone_number">请输入您的手机号码</string>
	<string name="register_progress">正在注册...</string>
	<string name="success">成功</string>
	<string name="fail">输入手机号码错误</string>
	<string name="connect">注册中...</string>
	<string name="login_connect">正在连接服务器...</string>
	<string name="back_edit">返回编辑</string>
	<string name="edit">编辑</string>
	<string name="old_account">老用户</string>
	<string name="register_notice">您需要注册才能正常使用省钱通拨打电话，注册成功后免费赠送话费让您免费体验高质量通话。</string>
	<string name="dial">拨打电话</string>
	<string name="create_success">注册成功。您可以进入拨号界面体验省钱通的优质通话。\n拨打被叫号码后服务器会有回拨电话。</string>
	<string name="account_balance">余额:</string>
	<string name="input_error">输入错误</string>
	<string name="bluetooth_serve_opened">蓝牙服务已经打开</string>
	<string name="bluetooth_serve_closed">蓝牙服务未打开</string>
	<string name="flight_mode_opened">飞行模式已经打开</string>
	<string name="flight_mode_closed">飞行模式未打开</string>
	<string name="recharge_prompt">充值成功后会有短信提示\n请正确填写</string>
	<string name="error_info">卡号或密码长度输入有误</string>
	<string name="register_fail">注册失败</string>
	<string name="dial_prompt">固定号码前加拨区号,国际号码前加拨00</string>
	<string name="account_center">用户中心</string>
	<string name="recommend_column">推荐栏目</string>
	<string name="cxye">点击查询余额</string>
	<string name="recharge_prompting">充一百将随机赠送100到500元不等话费</string>
	<string name="other_way"><u>其他充值方式</u></string>
	<string name="modify_password">修改密码</string>
	<string name="modifying">修改中...</string>
	<string name="modify_suc">修改成功</string>
	<string name="modify_fail">修改失败</string>
	<string name="click_modify_password">点击修改密码</string>
	<string name="forget_password">找回密码</string>
	<string name="click_forget_password">点击找回密码</string>
	<color name="main_text_color">#FFFFFF</color>
	<string name="submit">提交</string>
	<string name="update_fail">修改失败</string>
	<string name="back">返回</string>
	<string name="bind_mobile_phone">绑定号码: </string>
	<string name="switch_account">切换用户</string>
	<string name="click_switch_account">点击切换用户</string>
	<string name="account">ID/手机号码:</string>
	<string name="password">密码:</string>
	<string name="login_fail">登录失败</string>
	<string name="sending_sms">短信发送中...</string>
	<string name="yepp">广告位推广</string>
	<string name="get_password">正在取回,请稍后...</string>
	<string name="sleep">请稍后...</string>
	<string name="binging">正在连接服务器,请稍后...</string>
	<string name="account_unbind">帐号未绑定</string>
	<string name="your_password">密码:</string>
	<string name="bind">绑定</string>
	<string name="bind_fail">绑定失败</string>
	<string name="bind_success">绑定成功</string>
	<string name="access">进入</string>
	<string name="old_password_incorrect">原始密码错误</string>
	<string name="requesting">请求中...</string>
	<string name="wrong">信息</string>
	<string name="your_account">绑定号码：</string>
	<string name="new_pwd">密码</string>
	<string name="other_charge">联通、电信用户均可使用神州行充值卡在本软件中为账户充值。如果您无法获得移动充值卡可尝试 </string>
	<string name="unbind_prompt">为了您的帐号更安全，请绑定手机号码。绑定后您可以用手机号码登录，也可以通过手机号码取回密码。</string>
	<string name="unbind_point">未绑定用户不能使用找回密码功能！请到用户中心进行绑定！</string>
	<string name="password_point">密码长度为6-12位数字</string>
	<string name="input_new_password">请输入新密码</string>
	<string name="exit">退出程序</string>
	<string name="really_exit">确定退出程序?</string>
	<string name="update_versions">发现新版本!</string>
	<string name="upgrade">升级</string>
	<string name="cardcase">名片夹</string>
	<string name="today">今天</string>
</resources>