<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<LinearLayout android:id="@+id/old_pwd"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="原密码："
			android:textSize="20dp" />
		<EditText android:id="@+id/old_password" android:maxLength="12"
			android:layout_width="fill_parent" android:layout_height="wrap_content" 
			android:inputType="number" android:hint="@string/password_point"/>
	</LinearLayout>

	<LinearLayout android:id="@+id/new_pwd"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp" android:layout_below="@+id/old_pwd">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="新密码："
			android:textSize="20dp" />
		<EditText android:id="@+id/new_password" android:maxLength="12"
			android:layout_width="fill_parent" android:layout_height="wrap_content" 
			android:inputType="number" android:hint="@string/password_point"/>
	</LinearLayout>
		
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        style="@android:style/ButtonBar"
    	>
		
		<Button android:id="@+id/submit_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@drawable/button_indicator_finish"
            android:text="@string/submit"
        />
        
        <Button android:id="@+id/back_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@drawable/button_indicator_finish"
            android:text="@string/back"
        />
    
    </LinearLayout>

</RelativeLayout>
