<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent">

	<include layout="@layout/app_account_details"
		android:layout_alignParentTop="true" android:id="@+id/app_snippet" />

	<LinearLayout android:id="@+id/original_pwd"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_marginTop="10dip" android:layout_height="wrap_content"
		android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
		android:layout_below="@+id/app_snippet">
		<TextView android:layout_width="0dip" android:text="@string/account"
			 android:layout_weight="1"
			android:textSize="20dp" android:layout_height="wrap_content" />
		<EditText android:id="@+id/account_number"  android:layout_weight="1"
			android:layout_width="0dip" android:layout_height="wrap_content" 
			android:inputType="number" />
	</LinearLayout>
	<LinearLayout android:id="@+id/account_password"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp" android:layout_below="@+id/original_pwd">
		<TextView android:layout_width="0dip" android:layout_weight="1"
			android:layout_height="wrap_content" android:text="@string/password"
			android:textSize="20dp" />
		<EditText android:id="@+id/password" android:layout_weight="1"
			android:layout_width="0dip" android:layout_height="wrap_content" 
			android:inputType="number" />
	</LinearLayout>
	
	<View android:id="@+id/space2" android:layout_width="fill_parent"
		android:layout_height="15dp" android:layout_below="@+id/user_id_field" />

	<LinearLayout android:id="@+id/pwd" android:orientation="vertical" 
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_below="@+id/account_password">

		<TextView android:id="@+id/textView" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:autoLink="all" 
			android:paddingLeft="70dip"
			android:text="" android:textAppearance="?android:attr/textAppearanceMedium" 
			/>

	</LinearLayout>

	<LinearLayout android:id="@+id/reg" android:paddingTop="10dip"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_below="@+id/pwd">

		<TextView android:id="@+id/register_account"
			android:layout_width="wrap_content" android:paddingLeft="70dip"
			android:layout_height="wrap_content" android:autoLink="all"
			android:layout_below="@+id/textView" android:text="" 
			android:textAppearance="?android:attr/textAppearanceMedium" />
	</LinearLayout>

	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:layout_alignParentBottom="true"
		android:orientation="horizontal" style="@android:style/ButtonBar">

		<Button android:id="@+id/login_button" android:layout_width="0dip"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:drawableRight="@drawable/button_indicator_finish"
			android:text="@string/login" />

		<Button android:id="@+id/back_button" android:layout_width="0dip"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:drawableRight="@drawable/button_indicator_finish"
			android:text="@string/back" />

	</LinearLayout>

</RelativeLayout>